# proto

./: CMakeLists.txt  setup.bash
lib/: libabsl_bad_any_cast_impl.so.2308.0.0  libabsl_bad_any_cast_impl.so.2401.0.0  libabsl_bad_optional_access.so.2308.0.0  libabsl_bad_optional_access.so.2401.0.0  libabsl_bad_variant_access.so.2308.0.0  libabsl_bad_variant_access.so.2401.0.0  libabsl_base.so.2308.0.0  libabsl_base.so.2401.0.0  libabsl_city.so.2308.0.0  libabsl_city.so.2401.0.0  libabsl_civil_time.so.2308.0.0  libabsl_civil_time.so.2401.0.0  libabsl_cord.so.2308.0.0  libabsl_cord.so.2401.0.0  libabsl_cord_internal.so.2308.0.0  libabsl_cord_internal.so.2401.0.0  libabsl_cordz_functions.so.2308.0.0  libabsl_cordz_functions.so.2401.0.0  libabsl_cordz_handle.so.2308.0.0  libabsl_cordz_handle.so.2401.0.0  libabsl_cordz_info.so.2308.0.0  libabsl_cordz_info.so.2401.0.0  libabsl_cordz_sample_token.so.2308.0.0  libabsl_cordz_sample_token.so.2401.0.0  libabsl_crc32c.so.2308.0.0  libabsl_crc32c.so.2401.0.0  libabsl_crc_cord_state.so.2308.0.0  libabsl_crc_cord_state.so.2401.0.0  libabsl_crc_cpu_detect.so.2308.0.0  libabsl_crc_cpu_detect.so.2401.0.0  libabsl_crc_internal.so.2308.0.0  libabsl_crc_internal.so.2401.0.0  libabsl_debugging_internal.so.2308.0.0  libabsl_debugging_internal.so.2401.0.0  libabsl_demangle_internal.so.2308.0.0  libabsl_demangle_internal.so.2401.0.0  libabsl_die_if_null.so.2308.0.0  libabsl_die_if_null.so.2401.0.0  libabsl_examine_stack.so.2308.0.0  libabsl_examine_stack.so.2401.0.0  (+132 more)
lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  (+186 more)
(+5 files in other folders)
